--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -105,7 +105,7 @@
                         <h3 class="panel-title"><i class="fa fa-list-alt"></i> Recommender settings list</h3>
                     </div>
 
-                    <table class="table table-striped">
+                    <table class="table table-striped" ng-hide="recommenderList.length==0">
                         <thead>
                             <tr>
                                 <td><strong>Pool name</strong></td>
@@ -150,6 +150,10 @@
 
                         </tbody>
                     </table>
+                    
+                    <div class="panel-body">    
+                        <p ng-show="recommenderList.length==0">Recommender list empty!</p>    
+                    </div>
                 </div>                     
             </div>    
         </div>
