--- a/public/views/settings/staticItemSettings.html
+++ b/public/views/settings/staticItemSettings.html
@@ -1,23 +1,5 @@
-<div>    
-    <div id="wrapper">
-            <div class="alert alert-dismissable alert-danger" ng-repeat="errorMsg in errorMsgList">
-                <button type="button" 
-                        class="close" 
-                        data-dismiss="alert" 
-                        aria-hidden="true" 
-                        ng-click="msgHide(errorMsg)">&times;</button>
-                {{errorMsg}}
-            </div>      
-            
-            <div class="alert alert-dismissable alert-success" ng-repeat="msg in msgList">
-                <button type="button" 
-                        class="close" 
-                        data-dismiss="alert" 
-                        aria-hidden="true" 
-                        ng-click="msgSuccessHide(msg)">&times;</button>
-                {{msg}}
-            </div>
-        
+<div ng-init="getStaticItemList()">    
+    <div id="wrapper">        
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">    
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">           
@@ -39,7 +21,25 @@
             </div>
         </nav>
         
-        <div id="page-wrapper">		
+        <div id="page-wrapper">
+            <div class="alert alert-dismissable alert-danger" ng-repeat="errorMsg in errorMsgList">
+                <button type="button" 
+                        class="close" 
+                        data-dismiss="alert" 
+                        aria-hidden="true" 
+                        ng-click="msgHide(errorMsg)">&times;</button>
+                {{errorMsg}}
+            </div>      
+            
+            <div class="alert alert-dismissable alert-success" ng-repeat="msg in msgList">
+                <button type="button" 
+                        class="close" 
+                        data-dismiss="alert" 
+                        aria-hidden="true" 
+                        ng-click="msgSuccessHide(msg)">&times;</button>
+                {{msg}}
+            </div>
+            
             <ul class="nav nav-tabs">
                 <li><a data-toggle="tab" href="#/settings">Recommender settings</a></li>
                 <li class="active"><a data-toggle="tab" href="#/settings/staticItemSettings">Static item types</a></li>
@@ -56,19 +56,18 @@
                         <div class="row">      
                             <div class="col-sm-6">
                                 <label>Name</label>
-                                <input ng-click="staticItem.name" class="form-control" />
+                                <input ng-model="staticItem.name" class="form-control" />
                             </div>
 
                             <div class="col-sm-6">
                                 <label>Icon</label>
-                                <input type="file" name='staticIcon'>
+                                <input type="file" fileread="staticItem.icon" name='staticIcon'>
                             </div>
                             
                             <div class="col-sm-12">
                                 <br>
-                                <input type="submit" class="btn btn-primary" value="Save">
+                                <input type="submit" class="btn btn-primary" ng-click="saveStaticItem()" value="Save">
                             </div>
-                            
                         </div>
                     </div>
                 </div>  
@@ -77,21 +76,21 @@
                     <div class="panel-heading">
                         <h3 class="panel-title"><i class="fa fa-list-alt"></i> Static item list</h3>
                     </div>
-
-                    <table class="table table-striped">
+                    
+                    <table class="table table-striped" ng-hide="staticItemList.length==0">
                         <thead>
                             <tr>
                                 <td>Name</td>
                                 <td>Icon</td>
-                                <th></th>
+                                <th>Options</th>
                             </tr>
                         
                         </thead>
                             
                         <tbody>
-                            <tr>
-                                <td>Parametros genericos</td>
-                                <td>icon</td>
+                            <tr ng-repeat="staticItem in staticItemList">
+                                <td>{{staticItem.name}}</td>
+                                <td><img id="img" width="16" height="16" src="{{staticItem.icon}}" /></td>
                                 <td>
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
@@ -102,10 +101,12 @@
 
                                                 <ul class="dropdown-menu">
                                                     <li><a href="#settings/staticItemSettings" role="button" 
-                                                           data-toggle="modal" data-target="#editRecommenderModal">Edit setting</a></li>
+                                                           data-toggle="modal" data-target="#editRecommenderModal"
+                                                           ng-click="selectEditItem(staticItem)">Edit setting</a></li>
 
                                                     <li><a href="#settings/staticItemSettings" role="button" 
-                                                           data-toggle="modal" data-target="#deleteRecommenderModal">Delete setting</a>
+                                                           data-toggle="modal" data-target="#deleteRecommenderModal"
+                                                           ng-click="selectDeletedItem(staticItem)">Delete setting</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -116,7 +117,7 @@
                         </tbody>
                     </table>                    
 
-                    <nav align="center">
+                    <nav align="center" ng-hide="staticItemList.length==0">
                         <ul class="pagination">
                             <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
                             <li class="active"><a href="#">1</a></li>
@@ -131,6 +132,10 @@
                             </li>
                         </ul>
                     </nav>
+                    
+                     <div class="panel-body">    
+                        <p ng-show="staticItemList.length==0">Static item list empty</p>    
+                    </div>
                 </div>                     
             </div>    
         </div>
@@ -152,7 +157,7 @@
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteSelectedStaticItem()">Delete</button>  
               </div>
             </div>
 
@@ -174,12 +179,12 @@
                         <div class="row">      
                             <div class="col-sm-6">
                                 <label>Name</label>
-                                <input class="form-control" />
+                                <input ng-model="selectEditItemValue.name" class="form-control" />
                             </div>
                             
                             <div class="col-sm-6">
                                 <label>Icon</label>
-                                <input type="file" name='staticIcon'>
+                                <input type="file" name='staticIcon' fileread="selectEditItemValue.icon">
                             </div>
                             
                         </div>
@@ -187,7 +192,7 @@
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateStaticItem()">Save</button>  
               </div>
             </div>
 
