--- a/public/views/settings/dynamicItemSettings.html
+++ b/public/views/settings/dynamicItemSettings.html
@@ -1,4 +1,4 @@
-<div>    
+<div ng-init="getDynamicItemList()">    
     <div id="wrapper">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">    
             <div class="navbar-header">
@@ -22,6 +22,24 @@
         </nav>
         
         <div id="page-wrapper">		
+             <div class="alert alert-dismissable alert-danger" ng-repeat="errorMsg in errorMsgList">
+                    <button type="button" 
+                            class="close" 
+                            data-dismiss="alert" 
+                            aria-hidden="true" 
+                            ng-click="msgHide(errorMsg)">&times;</button>
+                    {{errorMsg}}
+            </div>      
+
+            <div class="alert alert-dismissable alert-success" ng-repeat="msg in msgList">
+                    <button type="button" 
+                            class="close" 
+                            data-dismiss="alert" 
+                            aria-hidden="true" 
+                            ng-click="msgSuccessHide(msg)">&times;</button>
+                    {{msg}}
+            </div>
+
             <ul class="nav nav-tabs">
                 <li><a data-toggle="tab" href="#/settings">Recommender settings</a></li>
                 <li><a data-toggle="tab" href="#/settings/staticItemSettings">Static item types</a></li>
@@ -38,17 +56,17 @@
                         <div class="row">      
                             <div class="col-sm-6">
                                 <label>Name</label>
-                                <input class="form-control" />
+                                <input ng-model="dynamicItem.name" class="form-control" />
                             </div>
 
                             <div class="col-sm-6">
                                 <label>Icon</label>
-                                <input type="file" name='dynamicIcon'>
+                                <input type="file" fileread="dynamicItem.icon" name='dynamicIcon'>
                             </div>
                             
                             <div class="col-sm-12">
                                 <br>
-                                <input type="submit" class="btn btn-primary" value="Save">
+                                <input type="submit" class="btn btn-primary" ng-click="saveDynamicItem()" value="Save">
                             </div>
                             
                         </div>
@@ -60,7 +78,7 @@
                         <h3 class="panel-title"><i class="fa fa-list-alt"></i> Dynamic item list</h3>
                     </div>
 
-                    <table class="table table-striped">
+                    <table class="table table-striped" ng-hide="dynamicItemList.length==0">
                         <thead>
                             <tr>
                                 <td>Name</td>
@@ -71,9 +89,9 @@
                         </thead>
                             
                         <tbody>
-                            <tr>
-                                <td>Parametros genericos</td>
-                                <td>icon</td>
+                            <tr ng-repeat="dynamicItem in dynamicItemList">
+                                <td>{{dynamicItem.name}}</td>
+                                <td><img id="img" width="16" height="16" src="{{dynamicItem.icon}}" /></td>
                                 <td>
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
@@ -84,10 +102,12 @@
 
                                                 <ul class="dropdown-menu">
                                                     <li><a href="#settings/dynamicItemSettings" role="button" 
-                                                           data-toggle="modal" data-target="#editRecommenderModal">Edit setting</a></li>
+                                                           data-toggle="modal" data-target="#editRecommenderModal"
+                                                           ng-click="selectEditDynamicItem(dynamicItem)">Edit setting</a></li>
 
                                                     <li><a href="#settings/dynamicItemSettings" role="button" 
-                                                           data-toggle="modal" data-target="#deleteRecommenderModal">Delete setting</a>
+                                                           data-toggle="modal" data-target="#deleteRecommenderModal"
+                                                           ng-click="selectDeleteItem(dynamicItem)">Delete setting</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -98,7 +118,7 @@
                         </tbody>
                     </table>                    
 
-                    <nav align="center">
+                    <nav align="center" ng-hide="dynamicItemList.length==0">
                         <ul class="pagination">
                             <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
                             <li class="active"><a href="#">1</a></li>
@@ -113,6 +133,10 @@
                             </li>
                         </ul>
                     </nav>
+                    
+                    <div class="panel-body">    
+                        <p ng-show="dynamicItemList.length==0">Dynamic item list empty</p>    
+                    </div>
                 </div>                     
             </div>    
         </div>
@@ -134,7 +158,7 @@
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteDynamicItem()">Delete</button>  
               </div>
             </div>
 
@@ -156,19 +180,19 @@
                         <div class="row">      
                             <div class="col-sm-6">
                                 <label>Name</label>
-                                <input class="form-control" />
+                                <input ng-model="selectEditDynamicItemValue.name" class="form-control" />
                             </div>
 
                             <div class="col-sm-6">
                                 <label>Icon</label>
-                                <input type="file" name='dynamicIcon'>
+                                <input type="file" fileread="selectEditDynamicItemValue.icon" name='dynamicIcon'>
                             </div>
                         </div>
               </div>
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-clik="updateDynamicItem()">Save</button>  
               </div>
             </div>
 
