--- a/public/views/register.html
+++ b/public/views/register.html
@@ -14,6 +14,9 @@
 
                     <input ng-model="registerForm.repeatPass" type="password" class="form-control input-lg" placeholder="Repeat password">
                     <br/>
+                
+                    <input type="file" fileread="registerForm.img" name="img" />
+                    <br/>
                     
                     <div class="form-group">
                         <button class="btn btn-default btn-lg btn-block" ng-click="goToLogin()">Go to login</button>
