--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -51,10 +51,9 @@
                                     .tooltip({title: 'Hello, world!', trigger: 'click'})
                                 }));
                                 
-                                alert(ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326'));
+                                //alert(ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326'));
                                 
-                                
-                                alert(pos);
+                                //alert("overlays --> "+map.getOverlays());
                               
                                 
                             });        
