--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -99,7 +99,8 @@
                                 <div class="col-xs-6">
                                     <label>Recommender settings</label>
                                     <select class="form-control" ng-model="scene.recommenderSettings">
-                                        <option ng-repeat="recommender in recommenderList" value="{{recommender}}">{{recommender.poolName}}</option>
+                                        <option ng-repeat="recommender in recommenderList" 
+                                                value="{{recommender._id}}">{{recommender.poolName}}</option>
                                     </select>
                                 </div>                            
                             </div>
@@ -118,7 +119,7 @@
                                 <div class="col-xs-6">
                                     </br>
                                     <label>Upper left corner: longitude</label>
-                                     <input id="initPosLong" class="form-control" ng-model="scene..longitudeULC" disabled/>
+                                     <input id="initPosLong" class="form-control" ng-model="scene.longitudeULC" disabled/>
                                 </div>        
 
                                 <div class="col-xs-6">
@@ -199,15 +200,26 @@
                                         });
 
                                         limitMap.on('singleclick', function(evt) { 
+                                             var appElement = document.querySelector('[ng-app=app]');
+                                             var $scope = angular.element(appElement).scope();
+                                             $scope = $scope.$$childHead; 
+                                            
                                             var corner = $('input[name=opciones]:checked').val()
                                             var pos = ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326');
                                             
                                             if(corner == "upperLeftCorner"){
                                                 $('#initPosLat').val(pos[0]);
+                                                $scope.scene.latitudeULC = pos[0];
+                                                
                                                 $('#initPosLong').val(pos[1]);
+                                                $scope.scene.longitudeULC = pos[1];
+                                                
                                             }else if(corner == "lowerRightCorner"){
                                                 $('#endPosLat').val(pos[0]);
+                                                $scope.scene.latitudeLRC = pos[0];
+                                                
                                                 $('#endPosLong').val(pos[1]);
+                                                $scope.scene.latitudeLRC = pos[1];
                                             }else{
                                                 alert("Invalid option");
                                             }
@@ -253,37 +265,37 @@
                                 <div ng-hide="setManuallySelected()">
                                     <!-- cuando tenemos que definir los objetos de forma manual en el mapa -->
                                     
-                                    <div class="col-xs-12">
-                                        <nav>
-                                          <ul class="pagination">
-                                            <li ng-repeat="staticItem in staticItemList">
-                                                <a href="#/map/newMap"><img src="{{staticItem.icon}}" height="16" width="16"/></a>  
-                                            </li>  
-                                              
-                                            <!--<li class="active">
-                                                <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                            </li>
-                                            <li>
-                                                <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                            </li>
-                                            <li>
-                                                <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                            </li>
-                                            <li>
-                                                <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                            </li>-->
-                                          </ul>
-                                        </nav>    
+                                    <div class="col-xs-3">
+                                        </br> 
+                                         <label>Item type</label>
+                                         <select class="form-control" ng-model="newStaticItem.type">
+                                            <option ng-repeat="staticItem in staticItemList" value="{{staticItem}}">
+                                                {{staticItem.name}}
+                                             </option>
+                                        </select>
+                                    </div>
+                                    
+                                    <div class="col-xs-3">
+                                        </br>
+                                        <label>Item name</label>
+                                        <input ng-model="newStaticItem.name" class="form-control"/>
+                                    </div>    
+                                    
+                                    <div class="col-xs-3">
+                                        </br>
+                                        <label>Longitude</label>
+                                        <input id="staticItemLong" class="form-control" ng-model="newStaticItem.longitude" disabled/>
+                                    </div>
+                                    
+                                    <div class="col-xs-3">
+                                        </br>
+                                        <label>Latitude</label>
+                                        <input id="staticItemLat" class="form-control" ng-model="newStaticItem.latitude" disabled/>
                                     </div>
                                     
                                     <div class="col-xs-12">
-                                        <label>Item name</label>
-                                        <input ng-model="scene.staticItemNames" class="form-control"/>
-                                    </div>    
-                                    
-                                    <div class="col-xs-12">
                                         </br>
-                                        <button type="button" class="btn btn-success">Save item</button>
+                                        <button type="button" class="btn btn-success" ng-click="saveStaticItemInScene()">Save item</button>
                                     </div>    
                                 </div>
      
@@ -307,12 +319,25 @@
                                                 controls: ol.control.defaults().extend([      
                                                     new ol.control.FullScreen() 
                                                 ])        
-                                            });     
+                                            });   
+                                            
+                                            staticItemsMap.on('singleclick', function(evt) { 
+                                                var position = ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326');
+                                                var appElement = document.querySelector('[ng-app=app]');
+                                                var $scope = angular.element(appElement).scope();
+                                                $scope = $scope.$$childHead; 
+                                                
+                                                $('#staticItemLat').val(position[0]);
+                                                $scope.newStaticItem.latitude = position[0];
+                                                
+                                                $('#staticItemLong').val(position[1]);
+                                                $scope.newStaticItem.longitude = position[1];                                                
+                                            });
                                         </script>                                      
                                 </div>
                                 
      
-                                <table class="table table-striped">
+                                <table class="table table-striped" ng-show="staticItemListInScene.length>0">
                                     <thead>
                                         <tr>
                                             <th>Item name</th>
@@ -321,30 +346,21 @@
                                             <th>Options</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody ng-repeat="staticItemElement in staticItemListInScene">
                                         <tr>
-                                            <td>Canterbury</td>
-                                            <td>Bar</td>
-                                            <td><img src="../../images/new-map.png" height="16" width="16"/></td>
+                                            <td>{{staticItemElement.name}}</td>
+                                            <td>{{staticItemElement.type.name}}</td>
+                                            <td><img src="{{staticItemElement.type.icon}}" height="16" width="16"/></td>
                                             <td>
                                                 <button class="btn btn-danger fa fa-trash-o" 
-                                                        data-toggle="modal" data-target="#deleteStaticItemModal"></button>
-                                            </td> 
-                                        </tr>
-                                        
-                                        <tr>
-                                            <td>100 Montaditos</td>
-                                            <td>Hotel</td>
-                                            <td><img src="../../images/new-map.png" height="16" width="16"/></td>
-                                            <td>
-                                                <button class="btn btn-danger fa fa-trash-o" 
-                                                        data-toggle="modal" data-target="#deleteStaticItemModal"></button>
+                                                        data-toggle="modal" data-target="#deleteStaticItemModal"
+                                                        ng-click="selectStaticItemToDeleteFromScene(staticItemElement)"></button>
                                             </td> 
                                         </tr>
                                     </tbody>
                                 </table>    
      
-                                <nav align="center">
+                                <nav align="center" ng-show="staticItemListInScene.length>0">
                                     <ul class="pagination">
                                         <li class="disabled"><a href="#" aria-label="Previous">
                                             <span aria-hidden="true">&laquo;</span></a>
@@ -410,35 +426,24 @@
                                 
                                 <div ng-hide="setManuallySelectedDynamicItem()">                                
                                     </br>
-                                    <div class="col-xs-12">
-                                        <nav>
-                                            <ul class="pagination">
-                                                <li ng-repeat="dynamicItem in dynamicItemList">
-                                                    <a href="#/map/newMap"><img src="{{dynamicItem.icon}}" height="16" width="16"/></a>
-                                                </li>
-                                                
-                                                <!--<li class="active">
-                                                    <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#/map/newMap"><img src="../../images/new-map.png" height="16" width="16"/></a>
-                                                </li>-->
-                                            </ul>
-                                        </nav>    
+                                    <div class="col-xs-4">
+                                        </br>
+                                        <label>Dynamic item type</label>
+                                        <select class="form-control" ng-model="newDynamicItem.type">
+                                            <option ng-repeat="dynamicItem in dynamicItemList" value="{{dynamicItem._id}}">
+                                                {{dynamicItem.name}}
+                                             </option>
+                                        </select>
                                     </div>
                                     
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-4">
+                                        </br>
                                         <label>Item name</label>
                                         <input ng-model="scene.dynamicItemName" class="form-control"/>
                                     </div>
 
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-4">
+                                        </br>
                                         <label>Item speed (km/h)</label>
                                         <input ng-model="scene.itemSpeed" class="form-control"/>
                                     </div>
@@ -518,7 +523,7 @@
                                 </div>
                                     
                                 <div class="col-sm-12">
-                                    <button type="button" class="btn btn-primary btn-block">Save</button>
+                                    <button type="button" class="btn btn-primary btn-block" ng-click="saveScene()">Save</button>
                                 </div>
                             </div>                            
                             
@@ -661,7 +666,7 @@
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteStaticItemFromScene()">Delete</button>  
               </div>
             </div>
 
