--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -219,7 +219,7 @@
                                                 $scope.scene.latitudeLRC = pos[0];
                                                 
                                                 $('#endPosLong').val(pos[1]);
-                                                $scope.scene.latitudeLRC = pos[1];
+                                                $scope.scene.longitudeLRC = pos[1];
                                             }else{
                                                 alert("Invalid option");
                                             }
@@ -253,12 +253,21 @@
                                     <div class="col-xs-12">
                                         </br>
                                         <label>Static items</label>    
-                                        <input type="file" name='staticItemFile'>     
+                                        <input type="file" name='staticItemFile' ng-model="scene.staticItemFile">     
                                         <b>
                                             <i>* File containing these static objects on the map, that is, don't 
                                                 changing geographical position during the simulation
                                             </i>
                                         </b>    
+                                    </div>
+                                
+                                    <div class="col-xs-12">
+                                        </br>
+                                        <button type="button" 
+                                                class="btn btn-success" 
+                                                ng-click="loadStaticItemsFromFile()">
+                                            Load static items
+                                        </button>
                                     </div>
                                 </div>
                                 
@@ -415,13 +424,22 @@
                                     <div class="col-xs-12">           
                                         </br>      
                                         <label>Dynamic items</label>
-                                        <input type="file" name='scene.dynamicItemFile'>      
+                                        <input type="file" ng-model='scene.dynamicItemFile'>      
                                         <b>
                                             <i>* File containing dynamic objects of the map, that is, the changing 
                                             geographic position during the simulation such as automobiles
                                             </i>
                                         </b>   
                                     </div>
+                                    <div class="col-xs-12">
+                                        </br>
+                                        <button type="button" 
+                                                class="btn btn-success" 
+                                                ng-click="loadDynamicItemsFromFile()">
+                                            Load dynamic items
+                                        </button>
+                                    </div>                                
+                                
                                 </div>
                                 
                                 <div ng-hide="setManuallySelectedDynamicItem()">                                
